test/types/typedefs/deitz/test_type3.good
test_type3.chpl:1: In function 'main':
test_type3.chpl:2: error: statement references variable 'b' before it is defined
